refactor: rename remaining virc references to accord across all tracked files
Cardinal: converge iteration 3

- Rename virc->accord in LICENSE copyright
- Rename virc->accord in app.html splash screen logo
- Rename virc_lib->accord_lib in Tauri main.rs
- Rename virc->accord in dist-isolation comment
- Rename virc-client/virc-files->accord-client/accord-files in code review docs
- Rename VircConfig->AccordConfig, fetchVircConfig->fetchAccordConfig, virc.json->accord.json in code review docs

--- a/accord-client/src/app.html
+++ b/accord-client/src/app.html
@@ -41,7 +41,7 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div id="app-splash" aria-hidden="true">
-			<span class="logo">virc</span>
+			<span class="logo">accord</span>
 			<div class="spinner"></div>
 		</div>
 		<div style="display: contents">%sveltekit.body%</div>
