--- a/accord-client/src/app.html
+++ b/accord-client/src/app.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#5b9ef0" />
 		<style>
 			/* Inline splash — renders before JS loads to prevent white flash */
 			body { margin: 0; background: #1a1a1e; }
@@ -45,5 +47,11 @@
 			<div class="spinner"></div>
 		</div>
 		<div style="display: contents">%sveltekit.body%</div>
+		<script>
+			// Register service worker for app shell caching (web builds only, not Tauri)
+			if ('serviceWorker' in navigator && !window.__TAURI_INTERNALS__) {
+				navigator.serviceWorker.register('/sw.js').catch(() => {});
+			}
+		</script>
 	</body>
 </html>
